samples/_failures_safe/1761286955_d29260_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5e777e0.c: In function ‘main’:
./samples/SAFE/__tmp_d5e777e0.c:154:5: error: expected expression at end of input
  154 |     matrix_transpose(&mat2, &
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d5e777e0.c:154:5: error: expected declaration or statement at end of input
